--- a/MXToolbox/MXToolbox-plugin.yaml
+++ b/MXToolbox/MXToolbox-plugin.yaml
@@ -9,20 +9,20 @@ servers:
   - url: "https://api.mxtoolbox.com/api/v1/"
 
 paths:
-  /Lookup/{Command}/?argument={argument}:
+  /Lookup/{Command}/?argument={Argument}:
     get:
-        operationId: "MxToolBoxLookupParameters"
-        summary: "Get MxToolBox Lookup Command - Argument Parameters"
+        operationId: "MXToolBoxLookup"
+        summary: "MXToolBox Lookup Command - Argument Parameters"
         parameters:
           - in: path
             name: Command
             schema:
               type: string
             required: true
-            default: tcp
-            description: Command value. One of these blacklist, smtp, mx, a, spf, txt, ptr, cname, whois, arin, soa, tcp, http, https, ping, trace, dns.
+            default: blacklist
+            description: Command value. One of these blacklist, smtp, mx, a, spf, txt, ptr, cname, whois, arin, soa, tcp, http, https, ping, trace, dns
           - in: path
-            name: argument
+            name: Argument
             schema:
               type: string
             required: true
@@ -30,6 +30,8 @@ paths:
         responses:
           "200":
             description: OK
+          "403":
+            description: API returned HTTP 403 Unauthorized. Check API Key provided.
 components:
   securitySchemes:
     ApiKeyAuth:
