--- a/MXToolbox/MXToolbox-plugin.yaml
+++ b/MXToolbox/MXToolbox-plugin.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.0
 
 info:
-  title: "MxToolbox SuperTool"
-  description: "MxToolbox SuperTool API"
+  title: "MXToolbox SuperTool"
+  description: "Look for malicious IP addresses and domains blacklisted"
   version: "v1"
 
 servers:
