--- a/MXToolbox/MXToolbox-plugin.yaml
+++ b/MXToolbox/MXToolbox-plugin.yaml
@@ -9,10 +9,24 @@ servers:
   - url: "https://api.mxtoolbox.com/api/v1/"
 
 paths:
-  /Lookup/blacklist/?argument=177.67.68.34:
+  /Lookup/{Command}/?argument={Argument}:
     get:
         operationId: "MXToolBoxLookup"
         summary: "MXToolBox Lookup Command - Argument Parameters"
+        parameters:
+          - in: path
+            name: Command
+            schema:
+              type: string
+            required: true
+            default: blacklist
+            description: Command value. One of these blacklist, smtp, mx, a, spf, txt, ptr, cname, whois, arin, soa, tcp, http, https, ping, trace, dns
+          - in: path
+            name: Argument
+            schema:
+              type: string
+            required: true
+            description: Argument value for example contoso.com
         responses:
           "200":
             description: OK
